# BUGTRACKER

./: .gitignore  db.sqlite3  pyproject.toml
authentication/: views.py
bugtracker/: settings.py  urls.py
custom_user/: models.py  urls.py
custom_user/migrations/: 0001_initial.py
templates/: index.html  loginpage.html  profile.html  signuppage.html  submitview.html  ticketsubmit.html
ticket/: models.py  urls.py  views.py
ticket/migrations/: 0001_initial.py  0002_auto_20200701_1820.py  0003_auto_20200701_1846.py
ticket_file/: forms.py  urls.py  views.py
